--- a/madiao/android/app/build.gradle
+++ b/madiao/android/app/build.gradle
@@ -32,8 +32,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.madiao"
+        applicationId "com.misterjimson.madiao"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode flutterVersionCode.toInteger()
